libxfont1 (1:1.5.2-3) UNRELEASED; urgency=medium

  * Drop libxfont1-udeb.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 24 Nov 2016 00:00:12 +0200

libxfont1 (1:1.5.2-2) unstable; urgency=medium

  * Rename source to libxfont1.
  * Rename dev package to libxfont1-dev.
  * control: Move to oldlibs.
  * control: Add myself to uploaders.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 17 Nov 2016 13:19:18 +0200

libxfont (1:1.5.2-1) unstable; urgency=medium

  * Team upload.
  * New upstream release.
  * Use https URL in watch file.
  * Add Adam Jackson's key to debian/upstream/signing-key.asc.
  * Bump Standards-Version to 3.9.8.
  * Use https URLs in Vcs-* control fields.
  * Remove Drew from Uploaders.

 -- Julien Cristau <jcristau@debian.org>  Sat, 24 Sep 2016 12:46:32 +0200

libxfont (1:1.5.1-1) unstable; urgency=high

  * New upstream release
    + bdfReadProperties: property count needs range check [CVE-2015-1802]
    + bdfReadCharacters: bailout if a char's bitmap cannot be read
      [CVE-2015-1803]
    + bdfReadCharacters: ensure metrics fit into xCharInfo struct
      [CVE-2015-1804]

 -- Julien Cristau <jcristau@debian.org>  Tue, 17 Mar 2015 16:55:21 +0100

libxfont (1:1.4.99.901-1) unstable; urgency=medium

  * New upstream release candidate.
    + includes the CVE-2014-{0209,0210,0211} patches
  * Remove Cyril from Uploaders.
  * Allow uscan to verify tarball signature.

 -- Julien Cristau <jcristau@debian.org>  Sat, 12 Jul 2014 17:44:11 +0200

libxfont (1:1.4.7-2) unstable; urgency=high

  * Pull from upstream git to fix FTBFS with new fontsproto (closes: #746052)
  * CVE-2014-0209: integer overflow of allocations in font metadata
  * CVE-2014-0210: unvalidated length fields when parsing xfs protocol replies
  * CVE-2014-0211: integer overflows calculating memory needs for xfs replies
  * Add breaks on xfs because we broke it by disabling font protocol support
    in 1.4.7.

 -- Julien Cristau <jcristau@debian.org>  Tue, 13 May 2014 17:25:49 +0200
